[gd_scene load_steps=7 format=3 uid="uid://spglirt5fokp"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_5mtwj"]
[ext_resource type="Texture2D" uid="uid://0j0bpe86rk7h" path="res://public_assets/血条和物品栏/Retro Inventory/Retro Inventory/Scaled 2x/Health_01.png" id="2_mbkeh"]
[ext_resource type="Texture2D" uid="uid://bof0nxl4w10fw" path="res://public_assets/血条和物品栏/Retro Inventory/Retro Inventory/Scaled 2x/Health_01_Bar01.png" id="3_xk5ug"]
[ext_resource type="Texture2D" uid="uid://c327e4mhcyvdx" path="res://public_assets/血条和物品栏/Retro Inventory/Retro Inventory/Scaled 2x/Health_04_Heart_Red_Clear.png" id="4_n1po7"]

[sub_resource type="LabelSettings" id="LabelSettings_a3ma6"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_mwmv3"]
font_size = 30

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5mtwj")

[node name="hps" type="CanvasLayer" parent="."]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="hp_frame" type="Sprite2D" parent="hps"]
position = Vector2(100, 33)
texture = ExtResource("2_mbkeh")

[node name="hp_value" type="Sprite2D" parent="hps/hp_frame"]
position = Vector2(-32, -15.5)
texture = ExtResource("3_xk5ug")
centered = false
region_enabled = true
region_rect = Rect2(32, 0, 96, 24)

[node name="Sprite2D" type="Sprite2D" parent="hps/hp_frame"]
position = Vector2(-47, -2)
texture = ExtResource("4_n1po7")
region_enabled = true
region_rect = Rect2(6, 4, 22, 20)

[node name="labels" type="CanvasLayer" parent="."]

[node name="VSplitContainer" type="VBoxContainer" parent="labels"]
offset_left = 870.0
offset_top = 12.0
offset_right = 910.0
offset_bottom = 89.0

[node name="Label" type="Label" parent="labels/VSplitContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_a3ma6")

[node name="money" type="Label" parent="labels/VSplitContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_mwmv3")
